Add roots for sources and collections